# BraidPoolDashBoard

./: .env.development  ARCHITECTURE.md  BACKEND_TESTING.md  BRAIDPOOLD_README.md  COMMANDS.md  COMPLETE_COMMANDS.sh  CREATEWALLET_EXPLAINED.md  Cargo.toml  DAILY_WORKFLOW.md  DEEP_DIVE_EXPLANATION.md  Dashboard.tsx  FIRST_TIME_SETUP.md  FOUR_STAGES.md  FRONTEND_CLEANUP_SUMMARY.md  INTEGRATION_GUIDE.md  INTEGRATION_SUMMARY.md  MAIN_README.md  MANUAL_FIX_INSTRUCTIONS.md  PROJECT_SETUP.md  PR_CHECKLIST.md  PR_ORGANIZATION_GUIDE.md  QUICK_FIX_GUIDE.md  README.md  RPC_CREDENTIALS_EXPLAINED.md  RUST_TESTS_SUMMARY.md  SIMPLE_COMMANDS.md  START_AND_TEST.sh  SYSTEM_ARCHITECTURE.md  TESTING_GUIDE.md  TESTING_README_IMPROVED.md  TEST_FIXES_APPLIED.md  TEST_SETUP_SUMMARY.md  THREE_TIER_DESIGN.md  Test.md  TransactionTable.test.tsx  TransactionTable.tsx  TransactionsPage.test.tsx  TransactionsPage.tsx  ULTRA_DEEP_DIVE.md  VERIFY_NODE_SYNC.md  (+19 more)
__tests__/: README.md  TransactionTable.test.tsx  TransactionsPage.test.tsx  braidpoolApi.test.ts  setup.ts  transaction.test.ts
bitcoind_node/: bitcoin.conf  start.sh
cmempoold_node/: bitcoin.conf
frontend_cleaned/: TransactionTable.tsx  TransactionsPage.tsx  braidpoolApi.ts  index.ts  transaction.ts
tests/: README.md  api_tests.rs  helper_functions_tests.rs
