[package]
name = "braidpool-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitcoincore-rpc = "0.18"
once_cell = "1.19"
futures = "0.3"
env_logger = "0.11"

[dev-dependencies]
# Testing dependencies
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }

[lib]
name = "braidpool_api"
path = "api.rs"

[[bin]]
name = "braidpool-server"
path = "main.rs"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
